; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/accel/extr_adxl372.c_adxl372_set_odr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/accel/extr_adxl372.c_adxl372_set_odr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adxl372_state = type { i32, i32 }

@ADXL372_TIMING = common dso_local global i32 0, align 4
@ADXL372_TIMING_ODR_MSK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.adxl372_state*, i32)* @adxl372_set_odr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adxl372_set_odr(%struct.adxl372_state* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.adxl372_state*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.adxl372_state* %0, %struct.adxl372_state** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.adxl372_state*, %struct.adxl372_state** %4, align 8
  %8 = getelementptr inbounds %struct.adxl372_state, %struct.adxl372_state* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @ADXL372_TIMING, align 4
  %11 = load i32, i32* @ADXL372_TIMING_ODR_MSK, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @ADXL372_TIMING_ODR_MODE(i32 %12)
  %14 = call i32 @regmap_update_bits(i32 %9, i32 %10, i32 %11, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  store i32 %18, i32* %3, align 4
  br label %24

19:                                               ; preds = %2
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.adxl372_state*, %struct.adxl372_state** %4, align 8
  %22 = getelementptr inbounds %struct.adxl372_state, %struct.adxl372_state* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* %6, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %19, %17
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @ADXL372_TIMING_ODR_MODE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
